re PR c++/57532 (operator& broken when used on rvalues)

PR c++/57532
	* parser.c (cp_parser_ref_qualifier_opt): Don't tentatively parse
	a ref-qualifier in C++98 mode.

From-SVN: r200836