gcc/testsuite/g++.dg/parse/ref-qual2.C
@@ -1,0 +1,6 @@
+// PR c++/57532
+
+int main()
+{
+    return (int() & int());
+}
